--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,12 @@ dependencies:
   firebase_auth: ^0.6.6
   cloud_firestore: ^0.8.2+3
   firebase_storage: ^1.0.4
+  fluttertoast: ^2.0.7
+  shared_preferences: ^0.4.2
+  image_picker: ^0.4.10
+  cached_network_image: ^0.4.1
+  intl: ^0.15.7
+
 
 dev_dependencies:
   flutter_test:
