--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,8 @@ dependencies:
   image_picker: ^0.4.10
   cached_network_image: ^0.4.1
   intl: ^0.15.7
+  firebase_database: ^1.0.5
+
 
 
 dev_dependencies:
